# SWM-hackathon-2026

./: .env.docker.example  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.mvp.yml  docker-compose.yml  index.html  merge_model.py  quantize_model.py  server.py
.claude/: settings.json
backend/: config.py  main.py  requirements.txt
backend/analysis/: __init__.py  alert_generator.py  obstacle_analyzer.py
backend/providers/: __init__.py  base.py  depth_provider.py  detection_provider.py  llm_provider.py  tts_provider.py
backend/utils/: __init__.py  frame_processor.py
database/: init.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  GuardianApp.jsx  UserApp.jsx
frontend/src/components/: AlertPanel.jsx  CameraView.jsx  GuardianCameraView.jsx  SettingsPanel.jsx  StatusBar.jsx
frontend/src/hooks/: useCamera.js  useSpatialPing.js  useTTS.js  useWebSocket.js
nginx/: nginx.conf
project/: .gitignore  agent.md  docker-compose.yml
project/backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  config.py  main.py  pyproject.toml  requirements.txt  requirements1.txt  test_gemini_live.py
project/backend/mocks/: gemini_mock.py  location_mock.py  smelter_mock.py
project/backend/models/: README.md
project/backend/routers/: caregiver_ws.py  multi_ws.py  processor_ws.py  stats_ws.py  streaming.py  user_ws.py  video.py  webrtc.py  websocket_manager.py
project/backend/services/: depth_model.py  fishjam_service.py  gemini_live_service.py  gemini_service.py  obstacle_detector.py  tts_service.py
project/backend/video_input/: README.md
project/frontend/: .env.docker  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  project.code-workspace  tailwind.config.js  vite.config.ts
project/frontend/src/: App.tsx  index.css  types.ts
project/frontend/src/components/: AlertChat.tsx  DepthVisualization.tsx  FingerprintModal.tsx  MapView.tsx  PerformanceCharts.tsx
project/frontend/src/hooks/: useAIAudioCall.ts  useBiometricAuth.ts  useLocation.ts  useSpatialPing.ts  useWebRTC.ts  useWebSocket.ts
project/frontend/src/lib/: wsUrl.ts
project/frontend/src/mocks/: smelterMock.tsx
project/frontend/src/pages/: CaregiverPanel.tsx  MultiAssistantPanel.tsx  MultiUserPanel.tsx  StatsPanel.tsx  UserPanel.tsx
project/frontend/src/services/: smelterService.ts
scripts/: setup-mvp.sh  test-hot-reload.sh
services/depth-worker-a/: .env.example  Dockerfile  Dockerfile.base  README.md  __init__.py  config.py  depth_model.py  pyproject.toml  worker.py
services/orchestrator/: Dockerfile  pyproject.toml
services/streaming-gateway/: Dockerfile  pyproject.toml
smelter/: package-lock.json  package.json  server.js
