[project]
name = "blind-assistant-backend"
version = "0.1.0"
description = "Blind Assistant MVP - Monolithic backend with depth estimation and real-time streaming"
requires-python = ">=3.11"
dependencies = [
    # FastAPI Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    
    # Image Processing
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    
    # Deep Learning (Depth Anything V2)
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    
    # Text-to-Speech
    "edge-tts>=6.1.9",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["N802", "N803", "N806"]  # Allow non-PEP8 naming in existing code

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# Relax strict mode for MVP code
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

