[project]
name = "orchestrator"
version = "1.0.0"
description = "Business logic and coordination service for Blind Assistant"
requires-python = ">=3.11"
dependencies = [
    # FastAPI Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    
    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # Redis
    "redis>=5.0.0",
    "hiredis>=2.2.0",
    
    # HTTP Client
    "httpx>=0.27.0",
    
    # TTS (Text-to-Speech)
    "edge-tts>=6.1.9",
    
    # Image Processing
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    
    # Monitoring
    "prometheus-client>=0.17.0",
    
    # Environment
    "python-dotenv>=1.0.0",
    
    # Logging
    "structlog>=23.1.0",
    
    # Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Caching
    "aiocache>=0.12.0",
    
    # S3 Client (MinIO)
    "aioboto3>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "sqlalchemy[mypy]>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."

